# OdinForgeAI

./: .dockerignore  .env  .env.example  .env.production.example  .gitignore  .gitleaksignore  .replit  BENCHMARK_INDEX.md  BENCHMARK_QUICK_START.md  BENCHMARK_READY.md  COMPETITIVE_ASSESSMENT.md  CONTRIBUTING.md  CORE_ACCEPTANCE_CONTRACT.md  CORE_RUNTIME_MAP.md  CORE_V2_DEPENDENCY_FREEZE.md  Caddyfile  DESIGN_SYSTEM.md  Dockerfile  E2E_TEST_REPORT.md  LICENSE  LIVE_GRAPH_UPGRADE.md  OdinForge-AI-Technical-White-Paper.md  OdinForge-AI-White-Sheet.md  PLANNER_ASSESSMENT.md  README.md  SECURITY.md  UI_AUDIT_REPORT.md  VULNERABILITY_MAP.md  design_guidelines.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  go-to-market-plan.md  odinforge-agent.queue.db  package-lock.json  package.json  pyproject.toml  replit.md  run_xbow_control.sh  social-media-launch-pack.md  (+3 more)
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
assets/: demo.tape
attached_assets/: AEVDetailPage_1765772491190.tsx  AEVPage_1765772491190.tsx  AEVProgressModal_1765772491190.tsx  Pasted--PS-C-Users-Administrator-Get-Content-C-Program-Files-O_1767326508111.txt  Pasted--PS-C-Users-Administrator-env-ODINFORGE-SERVER-https-od_1767322061759.txt  Pasted-OdinForge-Platform-Product-Implementation-Status-Rough-_1765929975147.txt  Pasted-Phase-0-Prep-and-Scope-Task-0-1-Create-a-new-feature-fl_1766146954254.txt  Pasted-Recommended-OdinForge-Role-Model-Hard-Coded-1-Platform-_1765936570489.txt  aev_(1)_1765772491189.ts  aev_1765772491190.ts  (+10 more)
server/: db.ts  (+8 more)
(+867 files in other folders)
